--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,20 @@ body {
 .task-card:hover {
   cursor: grab;
 }
+
+#draggable {
+  width: 100px;
+  height: 100px;
+  background: blue;
+  color: white;
+  text-align: center;
+  line-height: 100px;
+  cursor: move;
+}
+
+#droppable {
+  width: 200px;
+  height: 200px;
+  border: 2px dashed black;
+  margin-top: 20px;
+}
